<resources>
    <string name="app_name">TechForum</string>
    <string name="email_hint">Your Email...</string>
    <string name="password_hint">Password...</string>
    <string name="login_logo_desc">Login Logo Page</string>
    <string name="login_button_rsc">Login Into Account</string>
    <string name="login_reg_button_text">Need a New Account?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_search_text">Search</string>
    <string name="account_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Confirm Password...</string>
    <string name="reg_confirm_pass_text">Password...</string>
    <string name="setup_name_hint">Username...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="s_name_hint">Username...</string>
    <string name="s_btn_txt">Save Account Settings</string>
    <string name="add_desc_hint">Add description...</string>
    <string name="new_post_btn_hint">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notificatoin</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
