<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_action_home"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/bottom_home_text"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_action_notif"
        android:icon="@drawable/baseline_notification_important_black_24dp"
        android:title="@string/bottom_notification_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/bottom_action_account"
        android:icon="@drawable/baseline_person_black_24dp"
        android:title="@string/bottom_ac_text"
        app:showAsAction="always" />
</menu>